# FEM3D

./: CMakeLists.txt  README.md
backup/: FEMmachine copy.cpp  FEMmachine.hpp  FEMpatch.hpp
meshfile/: cube.geo  cube.msh  cubefine1.msh
pycodes/: num.ipynb
src/: Const.cpp  Const.hpp  FEM3D.cpp  FEMapplication.cpp  FEMapplication.hpp  FEMbdrypatch.hpp  FEMmachine.cpp  FEMmachine.hpp  FEMpatch.cpp  FEMpatch.hpp  fileIO.cpp  fileIO.hpp  matrixtools.hpp  mesh.cpp  mesh.hpp  numericaltools.cpp  numericaltools.hpp  test.cpp  test.hpp  utils.hpp
